# apim-s3-cache-action

./: .gitignore  Makefile  README.md  SECURITY.md  docker-compose.yml  nhsd-apim-alca3.s3-cache-task-0.0.1.vsix  nhsd-apim-alca3.s3-cache-task-0.0.2.vsix  nhsd-apim-alca3.s3-cache-task-0.0.3.vsix  nhsd-apim-alca3.s3-cache-task-0.0.4.vsix  nhsd-apim-alca3.s3-cache-task-0.0.5.vsix  nhsd-apim-alca3.s3-cache-task-0.0.6.vsix  nhsd-apim-alca3.s3-cache-task-0.0.7.vsix  nhsd-apim-alca3.s3-cache-task-1.0.0.vsix  nhsd-apim-alca3.s3-cache-task-1.0.1.vsix  nhsd-apim-alca3.s3-cache-task-1.0.2.vsix  package-lock.json  pyproject.toml  vss-extension.json
.github/workflows/: sbom.yml  sbomcheck.yml
azure/: azure-build-pipeline.yml
azure/components/: aws-assume-role.yml
buildAndReleaseTask/: .env  .gitignore  .taskkey  Makefile  aws.js  docker-compose.yml  index.js  package-lock.json  package.json  savecache.js  task.json  test-upload.js
buildAndReleaseTask/.localstack/data/: recorded_api_calls.json
buildAndReleaseTask/aws/: buckets.sh
buildAndReleaseTask/s3Utils/: uploadCache.js
buildAndReleaseTask/s3Utils/tests/: test-upload.js  uploadCache.test.js
data/testData/: test.json
s3CacheTask/: .taskkey  Makefile  package-lock.json  package.json  restoreCache.js  savecache.js  task.json  uploadCache.js
s3CacheTask/s3Utils/: cacheKeyUtils.js  createCacheEntry.js  createCacheKey.js  debug.js  extractCacheEntry.js  findCacheEntry.js  retrieveCacheEntry.js  s3CacheAction.js  s3CacheActionUtils.js  taskUtils.js  uploadCache.js
s3CacheTask/s3Utils/tests/: .taskkey  cacheKeyUtils.test.js  createCacheEntry.test.js  createCacheKey.test.js  debug.test.js  extractCacheEntry.test.js  findCacheEntry.test.js  s3CacheAction.test.js  (+4 more)
scripts/: check-python-venv-fixed.sh
(+2 files in other folders)
