[tool.poetry]
name = "apim-s3-cache-action"
version = "0.1.0"
description = ""
authors = ["Alex Carrie <alexander.carrie1@nhs.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
docker-compose-wait = "^1.2.2"
requests = "^2.27.1"
python-on-whales = "^0.57.0"

[tool.poetry.dev-dependencies]
jq = "^1.0.1"
docker = "5.0.3"
requests = "^2.27.1"
python-dotenv = "^1.0.0"

[tool.pytest.ini_options]
python_files = "*_tests.py test_*.py"
norecursedirs = ".git .venv .eggs build dist terraform"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
