[tool.poetry]
name = "apim-s3-cache-action"
version = "0.1.0"
description = ""
authors = ["Alex Carrie <alexander.carrie1@nhs.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker-compose-wait = "^1.2.2"
pyyaml = {version = "5.4.1", allow-prereleases = true}

[tool.poetry.dev-dependencies]
jq = "^1.0.1"
docker-compose = "^1.25.5"

[tool.pytest.ini_options]
python_files = "*_tests.py test_*.py"
norecursedirs = ".git .venv .eggs build dist terraform"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
