[tool.poetry]
name = "apim-s3-cache-action"
version = "0.1.0"
description = ""
authors = ["Alex Carrie <alexander.carrie1@nhs.net>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.dev-dependencies]
jq = "^1.0.1"
pyyaml = "6.0.3"

[tool.pytest.ini_options]
python_files = "*_tests.py test_*.py"
norecursedirs = ".git .venv .eggs build dist terraform"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
